# a1

./: .gitignore  CMakeLists.txt  README.md  check-info.py
data/meshes/3d models/mech_walker/: mech_walker.mtl
data/meshes/floor/: floor.mtl  texture_tile.frag
data/robots/cora/: cora_v1.rs  cora_v4.rbs
data/robots/cora/meshes_new/: neck.mtl
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
misc/: settings.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.h  main.cpp  robots.h
src/libs/: CMakeLists.txt
src/libs/gui/: CMakeLists.txt
src/libs/gui/include/gui/: application.h  camera.h  guiMath.h  inputstate.h  light.h  mesh.h  model.h  plots.h  renderer.h  shader.h  shadow_casting_light.h  shadow_map_fbo.h
src/libs/gui/shaders/: basic_lighting.frag  basic_lighting.vert  basic_shadow_lighting.frag  compute_shading.frag  optDemo.frag  optDemo.vert  texture.vert
src/libs/gui/src/: application.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  inputstate.cpp  mesh.cpp  model.cpp  shadow_map_fbo.cpp
src/libs/simAndControl/: CMakeLists.txt
src/libs/simAndControl/kinematics/: EndEffector.h  IK_Solver.h
src/libs/simAndControl/locomotion/: BodyFrame.h  FootFallPattern.h  KinematicTrackingController.h  LeggedRobot.h  LocomotionController.h  LocomotionPlannerHelpers.h  LocomotionTrajectoryPlanner.h  SimpleLocomotionTrajectoryPlanner.h
src/libs/simAndControl/robot/: GeneralizedCoordinatesRobotRepresentation.cpp  GeneralizedCoordinatesRobotRepresentation.h  RB.cpp  RB.h  RBJoint.cpp  RBJoint.h  RBLoader.cpp  RBLoader.h  RBProperties.cpp  RBProperties.h  RBRenderer.cpp  RBRenderer.h  RBSaver.h  RBState.h  RBUtils.cpp  RBUtils.h  Robot.cpp  Robot.h  RobotState.cpp  RobotState.h
src/libs/utils/: CMakeLists.txt
src/libs/utils/include/utils/: geoms.h  logger.h  mathDefs.h  mathUtils.h  timer.h  trajectory.h  utils.h
src/libs/utils/src/: logger.cpp  timer.cpp
src/test-a1/: CMakeLists.txt  TestResult.h  test.cpp
src/test-a2/: CMakeLists.txt  test.cpp
